kube/mosquitto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mosquitto
  name: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - image: eclipse-mosquitto
          name: mosquitto
          ports:
            - containerPort: 1883
              name: mqtt
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app: mosquitto
    project: mosquitto
spec:
  type: ClusterIP
  selector:
      app: mosquitto
  ports:
    - port: 1883
      targetPort: 1883
      protocol: TCP
---
