kube/prometheus.yaml
--- # ---
# apiVersion: v1
# kind: Secret
# metadata:
#   name: prometheus-creds
# type: Opaque
# data:
#   prometheus_DATABASE: cGFsaW50YQo=
#   prometheus_USERNAME: cm9vdAo=
#   prometheus_PASSWORD: cm9vdAo=
#   prometheus_HOST: aW5mbHV4ZGIK
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - image: prom/prometheus:v2.20.0
          name: prometheus
          # Some nasty hack
          user: root
          ports:
            - containerPort: 9090
              name: prometheus
          volumeMounts:
            - mountPath: /prometheus
              name: var-lib-prometheus
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config
        - name: var-lib-prometheus
          persistentVolumeClaim:
            claimName: prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: prometheus
    project: palinta
spec:
  # type: ClusterIP
  type: NodePort
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
