kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: palinta-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # - host: palinta.k8s.codespring.ro
  - host: palinta.apps.okd.codespring.ro
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
